--- a/views/states.erb
+++ b/views/states.erb
@@ -2,5 +2,11 @@
 
 <p>here is a list of states...</p>
 
+<select>
+  <% @states.each do | state | %>
+    <option value ="<%= state[:id] %>"><%= state[:name] %></option>
+  <% end %>
+</select>
+
 <!-- iterate through each state in the array and put them into list items individually -->
 
